--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "Disco Ball Floor Watcher",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node -r dotenv/config api/index.ts",
+    "start": "vercel dev",
+    "build": "vercel build",
     "createCommands": "ts-node -r dotenv/config helpers/createCommand.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "license": "MIT",
-  "homepage": "https://github.com/ianmitchell/discord-trout#readme",
   "dependencies": {
     "@vercel/node": "^2.8.14",
     "discord-interactions": "^2.0.2",
@@ -18,5 +18,8 @@
     "slash-commands": "^1.5.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
+  },
+  "devDependencies": {
+    "vercel": "^28.12.8"
   }
 }
